console.logs deleted, getAllTasks deleted
